[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/combat player.tscn" type="PackedScene" id=1]
[ext_resource path="res://gem.tscn" type="PackedScene" id=4]
[ext_resource path="res://scences/level.gd" type="Script" id=5]

[sub_resource type="TileSet" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7570.88, 117.5 )

[node name="level5" type="Node2D"]
script = ExtResource( 5 )
level_number = 5

[node name="combat player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1673, 4287 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -96.8314
margin_top = 79.37
margin_right = -56.8314
margin_bottom = 119.37
color = Color( 0.196078, 0.752941, 0.34902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
collision_layer = 16
collision_mask = 15
format = 1

[node name="gem" parent="." instance=ExtResource( 4 )]
position = Vector2( -0.0786743, -87.5521 )
gem_color = "yellow"

[node name="level finish timer" type="Timer" parent="."]
wait_time = 0.5

[node name="void" type="Area2D" parent="."]
position = Vector2( 0, 1 )
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="void"]
position = Vector2( 3261, 2859 )
shape = SubResource( 3 )

[connection signal="player_died" from="combat player" to="." method="_on_combat_player_player_died"]
[connection signal="gem_acquired" from="gem" to="." method="_on_gem_gem_acquired"]
[connection signal="timeout" from="level finish timer" to="." method="_on_level_finish_timer_timeout"]
